# enb_l1_b4860_ppc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  fapi.h  fapi_interface.h  fapi_ipc.h  fapi_scheduler.c  fapi_scheduler.h
asn1/: ANY.c  BIT_STRING.c  BIT_STRING.h  BOOLEAN.c  BOOLEAN.h  CMakeLists.txt  INTEGER.c  INTEGER.h  NULL.c  NULL.h  NativeEnumerated.c  NativeEnumerated.h  NativeInteger.c  NativeInteger.h  NativeReal.c  NativeReal.h  OBJECT_IDENTIFIER.c  OBJECT_IDENTIFIER.h  OCTET_STRING.c  OCTET_STRING.h  OPEN_TYPE.c  OPEN_TYPE.h  PrintableString.c  PrintableString.h  REAL.c  REAL.h  VisibleString.c  asn_codecs.h  asn_codecs_prim.c  asn_codecs_prim.h  asn_internal.c  asn_internal.h  constr_CHOICE.c  constr_CHOICE.h  constr_SEQUENCE.c  constr_SEQUENCE.h  constr_SEQUENCE_OF.c  constr_SEQUENCE_OF.h  constr_SET_OF.c  constr_SET_OF.h  (+9 more)
b4860/: CMakeLists.txt  fapi_b4860.c  fapi_b4860.h  fapi_b4860_cfg.c  fapi_b4860_cfg.h  fapi_b4860_cpri_eth.c  fapi_b4860_cpri_eth.h  fapi_b4860_ir.h  p8.c  p8.h
b4860/asn1/: fapi_b4860_config.asn
b4860/libb4860/: CMakeLists.txt  license.txt
b4860/libb4860/dsp_boot/: Makefile  README  dsp_boot.c  dsp_boot.h  dsp_compact.h  libdspboot.c
b4860/libb4860/fsl_shm/: Makefile
b4860/libb4860/fsl_shm/include/: fsl_ipc_shm.h
b4860/libb4860/fsl_shm/lib/: lg_shm.c  lg_shm.h
b4860/libb4860/fsl_shm/test/: app.c
b4860/libb4860/ipc/: Makefile  README
b4860/libb4860/ipc/include/: fsl_bsc913x_ipc.h  fsl_ipc_errorcodes.h  fsl_ipc_helper.h  fsl_ipc_lock.h  fsl_ipc_um.h  fsl_user_dma.h  fsl_usmmgr.h  logdefs.h
b4860/libb4860/ipc/lib/: fsl_ipc_channel.c  fsl_ipc_helper.c  fsl_ipc_lock.c  fsl_user_dma.c  fsl_usmmgr.c
b4860/libb4860/ipc/test/: dsp_recover.c  fsl_dump_memory.c  ipc_test.c  ipc_test67.c  l1_defense_app.c
b4860/libb4860/kernel/: Makefile  fsl_L1_defense.c  fsl_L1_defense.h  fsl_het_mgr.h  fsl_heterogeneous.h  fsl_heterogeneous_common.h  fsl_heterogeneous_debug.h  fsl_heterogeneous_debug_print.h  fsl_heterogeneous_ipc.h  fsl_heterogeneous_l1_defense.h  fsl_heterogeneous_mem.h  fsl_hetmgr.c  fsl_ipc.c  fsl_ipc_kmod.h  fsl_ipc_types.h  fsl_ker_compact.h  fsl_shm.c  fsl_shm.h
cmake/modules/: BuildVersion.cmake  FindSSE.cmake  build_version.h.in
cmake/modules/asn1/: ASN1.cmake
l2_fapi_generator/: CMakeLists.txt  l2_fapi_generator.c  l2_fapi_generator.h  l2_fapi_generator_app.c  l2_fapi_generator_app.h  l2_fapi_generator_defs.h  tbs_tables.h
l2_fapi_generator/asn1/: l2_fapi_generator.asn
l2_fapi_generator/configs/: l1.conf  l2_fapi_stim.conf  l2_fapi_stim_diversity_2t2r.conf  l2_fapi_stim_placeholders.conf
l2_fapi_generator/phy/: phy.c  phy.h  phy_common.c  phy_common.h
lib/core/: block_queue.c  block_queue.h  block_queue_internal.h  file.c  file.h  log.c  log.h  narg.h  thread_helper.c  thread_helper.h  time.c  time.h
scripts/: init.sh  load_modules.sh
